<resources>
    <string name="app_name">Test Application</string>
    <string name="main_default_textView">클릭 이벤트</string>
    <string name="main_button">버튼</string>
    <string name="color_main">Color : main</string>
    <string name="color_grey">Color : grey</string>
    <string name="change_screen">화면 전환</string>

    <string name="edit_text_title">회원가입</string>
    <string name="edit_text_hint">이름을 입력해주세요</string>
    <string name="edit_text_name">이름</string>
    <string name="edit_text_birth">생년월일</string>
    <string name="edit_text_phone">휴대폰 번호</string>
    <string name="edit_text_email">이메일</string>
    <string name="edit_text_name_hint">이름을 입력해주세요</string>
    <string name="edit_text_birth_hint">생년월일(YYYYMMDD)</string>
    <string name="edit_text_phone_hint">휴대폰 번호를 입력해주세요</string>
    <string name="edit_text_email_hint">이메일을 입력해주세요</string>
    <string name="edit_text_email_hint2">이메일 인증번호</string>
    <string name="edit_text_nationality">내국인</string>
    <string name="edit_text_woman">여</string>
    <string name="edit_text_man">남</string>
    <string name="edit_text_other">직접입력</string>
    <string name="edit_text_verification_request">인증요청</string>
    <string name="edit_text_next">다음</string>
    <string name="friends">친구</string>
    <string name="new_friends">새로운 친구</string>
    
    <string name="username">UserName</string>
    <string name="phone_number">010-0000-0000</string>

    <string name="nestedscrollview_text">RecyclerView &amp; NestedScrollView 실습</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>